change collect method to toList()